syntax = "proto3";

option java_package = "com.bridge.grpc";
option java_outer_classname = "ServiceProto";

package grpcservice;

service UserService {
  rpc GetUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 id = 1;
}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string email = 3;
}
